--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "clsx": "^1.2.1",
     "prism-react-renderer": "^2.1.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-lite-youtube-embed": "^2.3.52"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.0.0-rc.1",
