--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -15,3 +15,9 @@ slorber:
   title: Docusaurus maintainer
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
+
+sam:
+  name: Sam
+  title: Docusaurus maintainer
+  url: https://github.com/wgao19
+  image_url: https://blogs7245-1256587996.cos.ap-guangzhou.myqcloud.com/img/EUse-pic-0000109.png 
