--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "3.0.0-rc.1",
-    "@docusaurus/preset-classic": "3.0.0-rc.1",
+    "@docusaurus/core": "^3.1.1",
+    "@docusaurus/preset-classic": "^3.1.1",
+    "@docusaurus/theme-mermaid": "^3.1.1",
     "@mdx-js/react": "^3.0.0",
     "acorn": "^8.10.0",
     "clsx": "^1.2.1",
+    "or": "^0.2.0",
     "prism-react-renderer": "^2.1.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-lite-youtube-embed": "^2.3.52"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.0.0-rc.1",
-    "@docusaurus/types": "3.0.0-rc.1"
+    "@docusaurus/module-type-aliases": "^3.1.1",
+    "@docusaurus/types": "^3.1.1"
   },
   "browserslist": {
     "production": [
